# ckb-system-scripts

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  Makefile.clang  README.md  build.rs
.github/workflows/: ci.yaml  publish.yaml
.npm/: .gitignore  package-lock.json  package.json
c/: big_num.c  bitcoin_unlock.c  blake2b.h  ckb.mol  ckb_consts.h  ckb_syscalls.h  common.h  conversion.h  dao.c  dump_secp256k1_data.c  protocol.h  protocol_reader.h  ripemd160.h  secp256k1_blake160.h  secp256k1_blake160_lock.c  secp256k1_blake160_multisig_all.c  secp256k1_blake160_sighash_all.c  secp256k1_blake2b_lock.c  secp256k1_blake2b_sighash_all.c  secp256k1_helper.h  secp256k1_ripemd160_sha256_sighash_all.c  sha256.h  sha3.h  type_id.c  utils.h  witness_args_handwritten_reader.h
docs/c/: dao.html  secp256k1_blake160_multisig_all.html  secp256k1_blake160_sighash_all.html
src/: lib.rs
src/tests/: dao.rs  mod.rs  secp256k1_blake160_multisig_all.rs  secp256k1_blake160_sighash_all.rs  secp256k1_ripemd160_sha256_sighash_all.rs  type_id.rs
system-cells/: Cargo.toml  build.rs
tests/: Cargo.toml  secp256k1_blake160_sighash_all.rs
tests/src/: lib.rs  secp256k1_blake160_sighash_all.rs
