[package]
name = "ckb-system-scripts"
version = "0.5.1"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
build = "build.rs"
license = "MIT"
description = "CKB System Scripts"
repository = "https://github.com/nervosnetwork/ckb-system-scripts"
include = ["src/**/*", "Cargo.toml", "build.rs", "specs/cells/*"]

[dependencies]
includedir = "0.5.0"
phf = "0.7.21"

[build-dependencies]
includedir_codegen = "0.5.0"
blake2b-rs = "0.1.5"
faster-hex = "0.3"

[dev-dependencies]
byteorder = "1.3.1"
ckb-types = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
ckb-script = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
ckb-dao-utils = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
ckb-error = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
rand = "0.6.5"
lazy_static = "1.3.0"
ripemd160 = "0.8.0"
sha2 = "0.8.0"
secp256k1 = { version = "0.15.1" }
faster-hex = "0.3"
