[package]
name = "ckb-system-scripts"
version = "0.5.4"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
build = "build.rs"
license = "MIT"
description = "CKB System Scripts"
repository = "https://github.com/nervosnetwork/ckb-system-scripts"
include = ["src/**/*", "Cargo.toml", "build.rs", "specs/cells/*"]

[dependencies]
includedir = "0.6"
phf = "0.8"

[build-dependencies]
includedir_codegen = "0.6"
blake2b-rs = "0.2"
faster-hex = "0.6.0"

[dev-dependencies]
byteorder = "1.3.1"
ckb-types = "0.110.0"
ckb-script = "0.110.0"
ckb-traits = "0.110.0"
ckb-crypto = "0.110.0"
ckb-dao-utils = "0.110.0"
ckb-hash = "0.110.0"
ckb-error = "0.110.0"
rand = "0.7"
lazy_static = "1.3.0"
ripemd160 = "0.8.0"
sha2 = "0.8.0"
secp256k1 = { version = "0.15.1" }
faster-hex = "0.6.0"
