[package]
name = "tests"
version = "0.1.0"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dev-dependencies]
ckb-core = { git = "https://github.com/nervosnetwork/ckb.git", rev = "1d944e26a16039a1647dc30e5f9b36561203bd68" }
ckb-script = { git = "https://github.com/nervosnetwork/ckb.git", rev = "1d944e26a16039a1647dc30e5f9b36561203bd68" }
crypto = { git = "https://github.com/nervosnetwork/ckb.git", rev = "1d944e26a16039a1647dc30e5f9b36561203bd68" }
hash = { git = "https://github.com/nervosnetwork/ckb.git", rev = "1d944e26a16039a1647dc30e5f9b36561203bd68" }
numext-fixed-hash = "0.1.4"
rand = "0.6.5"
lazy_static = "1.3.0"

